--- a/mainJupiter.ipynb
+++ b/mainJupiter.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,18 +241,18 @@
     "    \n",
     "    def forward(self, x: torch.Tensor):\n",
     "        x = self.block_1(x)\n",
-    "        print(f\"E: {x.shape}\")\n",
+    "        #print(f\"E: {x.shape}\")\n",
     "        x = self.block_2(x)\n",
-    "        print(f\"E: {x.shape}\")\n",
+    "        #print(f\"E: {x.shape}\")\n",
     "        x = self.block_3(x)\n",
-    "        print(f\"E: {x.shape}\")\n",
+    "        #print(f\"E: {x.shape}\")\n",
     "        x = self.classifier(x)\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,25 +262,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "E: torch.Size([1, 16, 32, 32])\n",
-      "E: torch.Size([1, 32, 16, 16])\n",
-      "E: torch.Size([1, 64, 8, 8])\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "tensor([[0.3888, 0.6112]], grad_fn=<SoftmaxBackward0>)"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,73 +279,18 @@
    "source": [
     "torch.manual_seed(42)\n",
     "\n",
+    "# Test to see if it works\n",
     "images = torch.randn(size=(1, 3, 64, 64))\n",
     "model(images)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.manual_seed(42)\n",
-    "\n",
-    "#num_classes = combined_dataset.image_folder.classes\n",
-    "#print(f\"Number of classes: {num_classes}\")  # Should output 2\n",
-    "\n",
-    "model_v0 = DogOrCatModelV0(\n",
-    "    input_shape=64*64*3, \n",
-    "    hidden_units=10, \n",
-    "    output_shape=len(combined_dataset.image_folder.classes)\n",
-    "    ).to(\"cpu\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0.0000, 0.1484],\n",
-       "        [0.0655, 0.0047],\n",
-       "        [0.0000, 0.0000],\n",
-       "        [0.0475, 0.1204]], grad_fn=<ReluBackward0>)"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# troubleshoot da vidim ce dimensions delajo\n",
-    "dummy_x = torch.randn([4, 3, 64, 64])\n",
-    "model_v0(dummy_x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from helper_functions import accuracy_fn\n",
-    "\n",
-    "loss_fn = nn.CrossEntropyLoss()\n",
-    "#optimizer = torch.optim.Adam(model_v0.parameters(), lr=0.0001)\n",
-    "optimizer = torch.optim.SGD(params=model_v0.parameters(), \n",
-    "                            lr=0.0001)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Funkcija za izračun točnosti\n",
     "def accuracy_fn(y_true, y_pred):\n",
     "    \"\"\"Calculates accuracy between truth labels and predictions.\n",
     "\n",
@@ -367,34 +303,39 @@
     "    \"\"\"\n",
     "    correct = torch.eq(y_true, y_pred).sum().item()\n",
     "    acc = (correct / len(y_pred)) * 100\n",
-    "    return acc\n"
+    "    return acc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 236,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'cpu'"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Loss in optimizacija\n",
+    "\n",
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "#optimizer = torch.optim.Adam(model.parameters(), lr=0.0001)\n",
+    "optimizer = torch.optim.SGD(model.parameters(), \n",
+    "                            lr=0.0001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cuda, če je na voljo\n",
+    "\n",
     "import torch\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "device"
+    "#device # izpis naprave"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +357,8 @@
     "        \n",
     "        # Loss\n",
     "        loss = loss_fn(y_pred, y)\n",
-    "        train_loss += loss # Dodaj loss v train_loss\n",
+    "         # Dodaj loss v train_loss\n",
+    "        train_loss += loss\n",
     "        # Kalkulacija točnosti\n",
     "        train_acc += accuracy_fn(y_true=y, \n",
     "                                y_pred=y_pred.argmax(dim=1))\n",
@@ -465,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -480,71 +422,21 @@
      "output_type": "stream",
      "text": [
       "Epoch 1\n",
-      "-------------------------------\n",
-      "\n",
-      "Train loss: 6.23844 | Training Acc: 450.12%\n"
+      "-------------------------------\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 33%|███▎      | 1/3 [02:25<04:51, 145.53s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test loss: 0.69315 | Test Acc: 50.30%\n",
-      "Epoch 2\n",
-      "-------------------------------\n",
-      "\n",
-      "Train loss: 6.23844 | Training Acc: 450.12%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 67%|██████▋   | 2/3 [06:25<03:20, 200.88s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test loss: 0.69315 | Test Acc: 50.30%\n",
-      "Epoch 3\n",
-      "-------------------------------\n",
-      "\n",
-      "Train loss: 6.23844 | Training Acc: 450.12%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3/3 [10:55<00:00, 218.65s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test loss: 0.69315 | Test Acc: 50.30%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "C:\\Users\\Uporabnik\\AppData\\Roaming\\Python\\Python312\\site-packages\\PIL\\TiffImagePlugin.py:935: UserWarning: Truncated File Read\n",
+      "  warnings.warn(str(msg))\n"
      ]
     }
    ],
    "source": [
     "torch.manual_seed(42)\n",
+    "\n",
     "from timeit import default_timer as timer\n",
     "train_time_start = timer()\n",
     "\n",
@@ -553,17 +445,20 @@
     "from tqdm.auto import tqdm\n",
     "for epoch in tqdm(range(epochs)):\n",
     "    print(f\"Epoch {epoch + 1}\\n-------------------------------\")\n",
-    "    train_step(model=model_v0, \n",
+    "    train_step(model=model, \n",
     "               data_loader=train_dataloader, \n",
     "               loss_fn=loss_fn,\n",
     "               optimizer=optimizer,\n",
     "               accuracy_fn=accuracy_fn,\n",
     "               device=device)\n",
-    "    test_step(model=model_v0,\n",
+    "    test_step(model=model,\n",
     "              data_loader=val_dataloader,\n",
     "              loss_fn=loss_fn,\n",
     "              accuracy_fn=accuracy_fn,\n",
-    "              device=device)"
+    "              device=device)\n",
+    "    \n",
+    "train_time_end = timer()\n",
+    "print(f\"Training time: {train_time_end - train_time_start:.2f}s\")"
    ]
   }
  ],
